Connected API, implemented components. Impl. bonus tSk similar movies

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Flicktionary-App</title>
+  <title>F L I C K T I O N A R Y - A dictionary for flicks</title>
 </head>
 
 <body>
