implemented react bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>F L I C K T I O N A R Y - A dictionary for flicks</title>
 </head>
 
