fixed accessibility issue noted by Lighthouse

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Flicktionary - Your comprehensive movie dictionary. Search, explore, and learn about films, actors, directors, and cinematic terms in one place.">
   <title>F L I C K T I O N A R Y - A dictionary for flicks</title>
 </head>
 
